FIX overflowed add-calendar page

--- a/src/pages/ViewCalendarPage/ViewCalendarPage.scss
+++ b/src/pages/ViewCalendarPage/ViewCalendarPage.scss
@@ -1,4 +1,4 @@
-.calendar-page {
+.view-calendar-page {
     .zoomed-in-area {
         flex-shrink: 0.6;
         border-bottom: 1px solid grey;
