--- a/src/styles.css
+++ b/src/styles.css
@@ -28,9 +28,6 @@ html {
 
     width: 100vw;
     min-width: 300px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-
     background-color: rgb(228 228 231);
     /*zinc-200*/
 }
